[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Fonts/resources/generic_label.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/ui/character_selection/character_stage.gd" type="Script" id=2]
[ext_resource path="res://resources/characters/basic_character.tres" type="Resource" id=3]
[ext_resource path="res://assets/Fonts/resources/stats_value_font.tres" type="DynamicFont" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Stage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
selected_character = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_right = -4.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pivot" type="Control" parent="CenterContainer"]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="CenterContainer/Pivot"]
scale = Vector2( 5, 5 )
frames = SubResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.4
anchor_top = 0.05
anchor_right = 0.6
anchor_bottom = 0.1
margin_bottom = 5.0
custom_fonts/font = ExtResource( 1 )
text = "Character Stage"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.75
anchor_right = 0.6
anchor_bottom = 0.95
custom_fonts/font = ExtResource( 1 )
text = "UPGRADE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.6
anchor_right = 0.45
anchor_bottom = 0.7
custom_fonts/font = ExtResource( 1 )
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalkButton" type="Button" parent="."]
anchor_left = 0.45
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.7
custom_fonts/font = ExtResource( 1 )
text = "W"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IdleButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.55
anchor_bottom = 0.7
custom_fonts/font = ExtResource( 1 )
text = "I"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HurtButton" type="Button" parent="."]
anchor_left = 0.55
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 0.7
custom_fonts/font = ExtResource( 1 )
text = "H"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="VBoxContainer" parent="."]
anchor_left = 0.6
anchor_top = 0.15
anchor_right = 0.7
anchor_bottom = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="Stats"]
margin_right = 192.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
text = "Stats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="Stats"]
margin_top = 34.0
margin_right = 192.0
margin_bottom = 64.0
mouse_filter = 1
custom_fonts/font = ExtResource( 4 )
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage" type="Label" parent="Stats"]
margin_top = 68.0
margin_right = 192.0
margin_bottom = 98.0
mouse_filter = 1
custom_fonts/font = ExtResource( 4 )
text = "Damage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="range" type="Label" parent="Stats"]
margin_top = 102.0
margin_right = 192.0
margin_bottom = 132.0
mouse_filter = 1
custom_fonts/font = ExtResource( 4 )
text = "Range"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="range_radius" type="Label" parent="Stats"]
margin_top = 136.0
margin_right = 192.0
margin_bottom = 166.0
mouse_filter = 1
custom_fonts/font = ExtResource( 4 )
text = "Range radius"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="recharge_time" type="Label" parent="Stats"]
margin_top = 170.0
margin_right = 192.0
margin_bottom = 200.0
mouse_filter = 1
custom_fonts/font = ExtResource( 4 )
text = "Recharge time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack_cooldown" type="Label" parent="Stats"]
margin_top = 204.0
margin_right = 192.0
margin_bottom = 234.0
mouse_filter = 1
custom_fonts/font = ExtResource( 4 )
text = "Attack cooldown"
__meta__ = {
"_edit_use_anchors_": false
}
